# 3DPrimitives

./: .gitignore  CMakeLists.txt  README.md  README.txt
App/: CMakeLists.txt
App/Main/: 3DPrimitives.cpp  3DPrimitives.rc  Resource.h
App/PrimitivesApp/: Input.h  PrimitivesApp.cpp  PrimitivesApp.h
CMake/: HelperFunctions.cmake
Renderer/: CMakeLists.txt  Minimal.h
Renderer/Base/: Base.h
Renderer/Camera/: Camera.cpp  Camera.h
Renderer/Math/: Math.cpp  Math.h
Renderer/Rendering/: D3DIncludes.h  DataTypes.h  GraphicsManager.cpp  GraphicsManager.h  GraphicsTypes.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h
Renderer/Shaders/: BasePS.hlsl  BaseVS.hlsl  Common.hlsli  LightUtility.hlsli
